[tool.poetry]
name = "nix-morph-kgc"
version = "2.6.3"
description = ""
authors = ["John Shaffer <john@insilica.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
morph-kgc = "==2.6.3"
pyarrow = "^13.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
